# The_AI_Engineer_Challenge

./: MERGE.md  README.md  package-lock.json  package.json  pyproject.toml  vercel.json
.github/instructions/: frontend-rule.instructions.md  general-rule.instructions.md  readme-rule.instructions.md
aimakerspace/: text_utils.py  vectordatabase.py
aimakerspace/openai_utils/: embedding.py
api/: app.py
frontend/: .gitignore  package.json  vite.config.js
frontend/src/: App.jsx  index.css
